--- a/views/about.hbs
+++ b/views/about.hbs
@@ -5,7 +5,18 @@
 
 		<!-- Start your code here -->
 
-
+<header class="mt-4">
+<h1>About Page Introduction</h1>
+<p>It's a pleasure to welcome you! I'm thrilled to offer a glimpse into my world.</p>
+</header>
+ 
+<section>
+<h2>About My Journey</h2>
+<p>Welcome! I'm Funmi, a dedicated student with the ID 110608221 enrolled in the BTT program. This adventure of learning and growth has been both a challenge and a joy. My fascination with technology began at a young age, driven by its capacity to revolutionize our world. This interest steered me toward a career in web development, where I aim to apply my creativity and analytical skills to create cutting-edge web applications.</p>
+<p>In my academic journey, I've explored a variety of programming languages, including Python, and am currently diving into HTML, CSS, JavaScript, and Node.js. These tools have empowered me to craft dynamic and accessible websites that meet the diverse needs of users. My portfolio includes straightforward websites, and I aspire to eventually tackle complex web applications that address tangible issues.</p>
+<p>Apart from my formal education, I'm a relentless learner, always experimenting with emerging technologies and keeping abreast of the latest trends in the tech industry. I'm convinced that ongoing education is crucial for success in this rapidly changing sector. When I'm not engrossed in coding, I find joy in playing football, engaging in photography, and watching films.</p>
+<p>I look forward to the future with optimism, eager to seize the opportunities that come my way. My ambition is to excel in my field.</p>
+</section>
 
 		<!-- End your code here  -->
 
