--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,7 +4,27 @@
 
 
 		<!-- Start your code here -->
-
+<header class="mt-4">
+<h1>Greetings from My WEB700 Site</h1>
+<p>Welcome to my online space, where I'll showcase my knowledge of HTML5 principles and methods, along with Routing in Express...</p>
+</header>
+ 
+<section>
+<h2>Exploring the Site</h2>
+<p>Our website is structured around 3 static pages (Home, About, HTML Demo) and 5 dynamic routes that provide specific data, featuring: 
+<a href="/students">All Students</a>, 
+<a href="/students?course=3">Students Filtered by Course</a>, 
+<a href="/student/2">Detailed View of a Single Student</a>, 
+<a href="/tas">Complete List of Managers</a>, and 
+<a href="/courses">Comprehensive Courses Overview</a>.
+</p>
+</section>
+ 
+<section>
+<h2>Demonstrating HTML5</h2>
+<p>This website leverages HTML5, the most recent update to the HTML standard, to exhibit a wide range of web content.</p>
+ 
+</section>
 
 
 		<!-- End your code here  -->
